--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <title>SOMETHING EVERYDAY</title>
 </head>
 <body>
-    <p>Something in the way... Something everyday, hmmm mmmm hmmm, something in the way.</p>
+    <p>Something in the way. With changes Something everyday, hmmm mmmm hmmm, something in the way.</p>
 </body>
 </html>
