--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <p>Something in the way. With changes Something everyday, hmmm mmmm hmmm, something in the way.</p>
-    <p>and these are some new changes</p>
+    <p>and now these changes are changed</p>
 </body>
 </html>
