--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="fonts.css" type="text/css">
     <script src="index.js"></script>
     <title>SOMETHING EVERYDAY</title>
 </head>
 <body>
-    <p>Something in the way. With changes Something everyday, hmmm mmmm hmmm, something in the way.</p>
-    <p>and now these changes are changed</p>
+    <div class="NavBar">
+
+        <nav>
+            <ul>
+                <li><a href="#" onclick="monkey()" id="urmom">UR MOM</a></li>
+                <li><a href="#">Education</a></li>
+                <li><a href="#">Expirience</a></li>
+                <li><a href="#">Projects</a></li>
+            </ul>
+        </nav>
+
+    </div>
+    <div class="content">
+    <p id="p1">Something in the way. With changes Something everyday, hmmm mmmm hmmm, something in the way.</p>
+    <p id="p2">.</p>
+    <p id="p3">.</p>
+    <p id="p4">.</p>
+    <p id="p5">.</p>
+    </div>
+    <iframe id="video" width="80%" height="400"
+        src="https://www.youtube.com/embed/QHkWWzzsjcU">
+    </iframe>
 </body>
 </html>
